--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"publishConfig": {
+		"@watfoe:registry": "https://npm.pkg.github.com"
+	}
 }
