--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/watfoe-ui",
 	"author": "Watfoe Team",
-	"version": "0.0.1",
+	"version": "0.0.1-a",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/watfoe-ui.git"
@@ -20,11 +20,14 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
+	"main": "./dist/index.js",
 	"exports": {
 		".": {
+			"import": "./dist/index.js",
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
-		}
+		},
+		"./package.json": "./package.json"
 	},
 	"files": [
 		"dist",
