--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "@watfoe/watfoe-ui",
+	"name": "@watfoe/wui",
 	"author": "Watfoe Team",
-	"version": "0.0.1-a",
+	"version": "0.0.1-b",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/watfoe/watfoe-ui.git"
+		"url": "https://github.com/watfoe/wui.git"
 	},
 	"scripts": {
 		"dev": "vite dev",
@@ -20,14 +20,56 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest"
 	},
-	"main": "./dist/index.js",
 	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js",
-			"svelte": "./dist/index.js"
+		"./buttons": {
+			"types": "./dist/buttons/index.d.ts",
+			"svelte": "./dist/buttons/index.js"
 		},
-		"./package.json": "./package.json"
+		"./display": {
+			"types": "./dist/display/index.d.ts",
+			"svelte": "./dist/display/index.js"
+		},
+		"./domains": {
+			"types": "./dist/domains/index.d.ts",
+			"svelte": "./dist/domains/index.js"
+		},
+		"./feedback": {
+			"types": "./dist/feedback/index.d.ts",
+			"svelte": "./dist/feedback/index.js"
+		},
+		"./inputs": {
+			"types": "./dist/inputs/index.d.ts",
+			"svelte": "./dist/inputs/index.js"
+		},
+		"./layout": {
+			"types": "./dist/layout/index.d.ts",
+			"svelte": "./dist/layout/index.js"
+		},
+		"./navigation": {
+			"types": "./dist/navigation/index.d.ts",
+			"svelte": "./dist/navigation/index.js"
+		},
+		"./typography": {
+			"types": "./dist/typography/index.d.ts",
+			"svelte": "./dist/typography/index.js"
+		},
+		"./utils": {
+			"types": "./dist/utils/index.d.ts",
+			"svelte": "./dist/utils/index.js"
+		}
+	},
+	"typesVersions": {
+		">4.0": {
+			"buttons": ["./dist/buttons/index.d.ts"],
+			"display": ["./dist/display/index.d.ts"],
+			"domains": ["./dist/domains/index.d.ts"],
+			"fedback": ["./dist/fedback/index.d.ts"],
+			"inputs": ["./dist/inputs/index.d.ts"],
+			"layout": ["./dist/layout/index.d.ts"],
+			"navigation": ["./dist/navigation/index.d.ts"],
+			"typography": ["./dist/typography/index.d.ts"],
+			"utils": ["./dist/utils/index.d.ts"]
+		}
 	},
 	"files": [
 		"dist",
