--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
 		"test:unit": "vitest"
 	},
 	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		},
 		"./buttons": {
 			"types": "./dist/buttons/index.d.ts",
 			"svelte": "./dist/buttons/index.js"
