--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package:app",
-		"build:app": "vite build && npm run package:app",
 		"preview": "vite preview",
 		"package": "svelte-kit sync && svelte-package && publint",
-		"package:app": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -83,8 +81,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.0.0",
-		"sass": "^1.69.0"
+		"svelte": "^4.0.0"
 	},
 	"devDependencies": {
 		"sass": "^1.69.0",
@@ -102,6 +99,7 @@
 		"publint": "^0.1.9",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-preprocess-cssmodules": "^2.2.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
@@ -109,7 +107,6 @@
 	},
 	"dependencies": {
 		"libphonenumber-js": "^1.10.47",
-		"svelte-preprocess-cssmodules": "^2.2.4",
 		"svelte-preprocess-delegate-events": "^0.4.2"
 	},
 	"svelte": "./dist/index.js",
