--- a/package.json
+++ b/package.json
@@ -60,14 +60,30 @@
 	},
 	"typesVersions": {
 		">4.0": {
-			"buttons": ["./dist/buttons/index.d.ts"],
-			"display": ["./dist/display/index.d.ts"],
-			"domains": ["./dist/domains/index.d.ts"],
-			"feedback": ["./dist/feedback/index.d.ts"],
-			"inputs": ["./dist/inputs/index.d.ts"],
-			"layout": ["./dist/layout/index.d.ts"],
-			"navigation": ["./dist/navigation/index.d.ts"],
-			"typography": ["./dist/typography/index.d.ts"]
+			"buttons": [
+				"./dist/buttons/index.d.ts"
+			],
+			"display": [
+				"./dist/display/index.d.ts"
+			],
+			"domains": [
+				"./dist/domains/index.d.ts"
+			],
+			"feedback": [
+				"./dist/feedback/index.d.ts"
+			],
+			"inputs": [
+				"./dist/inputs/index.d.ts"
+			],
+			"layout": [
+				"./dist/layout/index.d.ts"
+			],
+			"navigation": [
+				"./dist/navigation/index.d.ts"
+			],
+			"typography": [
+				"./dist/typography/index.d.ts"
+			]
 		}
 	},
 	"files": [
@@ -79,7 +95,6 @@
 		"svelte": "^4.0.0"
 	},
 	"devDependencies": {
-		"sass": "^1.69.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
@@ -92,6 +107,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"publint": "^0.1.9",
+		"sass": "^1.69.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tslib": "^2.4.1",
