--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Watfoe Team",
-	"version": "0.0.1-i",
+	"version": "0.0.1-j",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
@@ -24,66 +24,6 @@
 		".": {
 			"types": "./dist/index.d.ts",
 			"svelte": "./dist/index.js"
-		},
-		"./buttons": {
-			"types": "./dist/buttons/index.d.ts",
-			"svelte": "./dist/buttons/index.js"
-		},
-		"./display": {
-			"types": "./dist/display/index.d.ts",
-			"svelte": "./dist/display/index.js"
-		},
-		"./domains": {
-			"types": "./dist/domains/index.d.ts",
-			"svelte": "./dist/domains/index.js"
-		},
-		"./feedback": {
-			"types": "./dist/feedback/index.d.ts",
-			"svelte": "./dist/feedback/index.js"
-		},
-		"./inputs": {
-			"types": "./dist/inputs/index.d.ts",
-			"svelte": "./dist/inputs/index.js"
-		},
-		"./layout": {
-			"types": "./dist/layout/index.d.ts",
-			"svelte": "./dist/layout/index.js"
-		},
-		"./navigation": {
-			"types": "./dist/navigation/index.d.ts",
-			"svelte": "./dist/navigation/index.js"
-		},
-		"./typography": {
-			"types": "./dist/typography/index.d.ts",
-			"svelte": "./dist/typography/index.js"
-		}
-	},
-	"typesVersions": {
-		">4.0": {
-			"buttons": [
-				"./dist/buttons/index.d.ts"
-			],
-			"display": [
-				"./dist/display/index.d.ts"
-			],
-			"domains": [
-				"./dist/domains/index.d.ts"
-			],
-			"feedback": [
-				"./dist/feedback/index.d.ts"
-			],
-			"inputs": [
-				"./dist/inputs/index.d.ts"
-			],
-			"layout": [
-				"./dist/layout/index.d.ts"
-			],
-			"navigation": [
-				"./dist/navigation/index.d.ts"
-			],
-			"typography": [
-				"./dist/typography/index.d.ts"
-			]
 		}
 	},
 	"files": [
