--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Watfoe Team",
-	"version": "0.0.1-u",
+	"version": "0.0.1-v",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
