--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"publint": "^0.1.16",
 		"sass": "^1.70.0",
-		"svelte": "^4.2.9",
+		"svelte": "5.0.0-next.48",
 		"svelte-check": "^3.6.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
@@ -58,8 +58,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/enhanced-img": "^0.1.8",
-		"libphonenumber-js": "^1.10.54",
-		"svelte-preprocess-delegate-events": "^0.4.3"
+		"libphonenumber-js": "^1.10.54"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
