--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^4.2.9"
+		"svelte": "^5.0.0-next.48"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.41.1",
