--- a/.prettierignore
+++ b/.prettierignore
@@ -8,6 +8,11 @@ node_modules
 !.env.example
 
 # Ignore files for PNPM, NPM and YARN
+
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+# Ignore css files
+
+/src/lib/**/*.css
