--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.123"
+		"svelte": "^5.0.0-next.125"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
@@ -48,12 +48,11 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.1.16",
-		"svelte": "5.0.0-next.123",
+		"svelte": "5.0.0-next.125",
 		"svelte-check": "^3.7.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
-		"vite": "^5.2.10",
-		"vitest": "^0.32.4"
+		"vite": "^5.2.10"
 	},
 	"dependencies": {
 		"@sveltejs/enhanced-img": "^0.2.0",
