--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Watfoe Team",
-	"version": "0.0.48",
+	"version": "0.0.49",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
@@ -47,7 +47,7 @@
 		"eslint-plugin-svelte": "^2.38.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
-		"publint": "^0.1.16",
+		"publint": "^0.2.7",
 		"svelte": "5.0.0-next.127",
 		"svelte-check": "^3.7.1",
 		"tslib": "^2.6.2",
@@ -56,8 +56,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/enhanced-img": "^0.2.0",
-		"libphonenumber-js": "^1.10.61",
-		"material-symbols": "^0.17.4"
+		"libphonenumber-js": "^1.10.61"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
