--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@watfoe/wui",
-	"author": "Watfoe Team",
+	"author": "Jimmie Lovell<jimmieomlovell@gmail.com>",
 	"version": "0.0.53",
 	"repository": {
 		"type": "git",
@@ -32,7 +32,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.133"
+		"svelte": "^5.0.0-next.135"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
@@ -48,7 +48,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.2.7",
-		"svelte": "5.0.0-next.133",
+		"svelte": "5.0.0-next.135",
 		"svelte-check": "^3.7.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
