--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 			"svelte": "./dist/index.js"
 		},
 		"./button": {
-			"types": "./dist/button/index.d.ts",
+			"types": "./dist/button/index.svelte.d.ts",
 			"svelte": "./dist/button/index.svelte"
 		},
 		"./avatar": {
@@ -162,7 +162,7 @@
 			"svelte": "./dist/navigation/menu/index.svelte"
 		},
 		"./menu-item": {
-			"types": "./dist/navigation/menu/menu-item.d.ts",
+			"types": "./dist/navigation/menu/menu-item.svelte.d.ts",
 			"svelte": "./dist/navigation/menu/menu-item.svelte"
 		},
 		"./tabs": {
