--- a/package.json
+++ b/package.json
@@ -26,75 +26,75 @@
 			"svelte": "./dist/index.js"
 		},
 		"./button": {
-			"types": "./dist/button/index.svelte.d.ts",
+			"types": "./dist/button/index.d.ts",
 			"svelte": "./dist/button/index.js"
 		},
 		"./avatar": {
-			"types": "./dist/avatar/index.svelte.d.ts",
+			"types": "./dist/avatar/index.d.ts",
 			"svelte": "./dist/avatar/index.js"
 		},
 		"./avatargroup": {
-			"types": "./dist/avatargroup/index.svelte.d.ts",
+			"types": "./dist/avatargroup/index.d.ts",
 			"svelte": "./dist/avatargroup/index.svelte"
 		},
 		"./badge": {
-			"types": "./dist/badge/index.svelte.d.ts",
+			"types": "./dist/badge/index.d.ts",
 			"svelte": "./dist/badge/index.js"
 		},
 		"./chip": {
-			"types": "./dist/chip/index.svelte.d.ts",
+			"types": "./dist/chip/index.d.ts",
 			"svelte": "./dist/chip/index.js"
 		},
 		"./divider": {
-			"types": "./dist/divider/index.svelte.d.ts",
+			"types": "./dist/divider/index.d.ts",
 			"svelte": "./dist/divider/index.js"
 		},
 		"./icon": {
-			"types": "./dist/icon/index.svelte.d.ts",
+			"types": "./dist/icon/index.d.ts",
 			"svelte": "./dist/icon/index.js"
 		},
 		"./list": {
-			"types": "./dist/list/index.svelte.d.ts",
+			"types": "./dist/list/index.d.ts",
 			"svelte": "./dist/list/index.js"
 		},
 		"./listitem": {
-			"types": "./dist/listitem/index.svelte.d.ts",
+			"types": "./dist/listitem/index.d.ts",
 			"svelte": "./dist/listitem/index.js"
 		},
 		"./listbuttonitem": {
-			"types": "./dist/listbuttonitem/index.svelte.d.ts",
+			"types": "./dist/listbuttonitem/index.d.ts",
 			"svelte": "./dist/listbuttonitem/index.svelte"
 		},
 		"./logo": {
-			"types": "./dist/logo/index.svelte.d.ts",
+			"types": "./dist/logo/index.d.ts",
 			"svelte": "./dist/logo/index.js"
 		},
 		"./tooltip": {
-			"types": "./dist/tooltip/index.svelte.d.ts",
+			"types": "./dist/tooltip/index.d.ts",
 			"svelte": "./dist/tooltip/index.js"
 		},
 		"./modal": {
-			"types": "./dist/modal/index.svelte.d.ts",
+			"types": "./dist/modal/index.d.ts",
 			"svelte": "./dist/modal/index.js"
 		},
 		"./snackbar": {
-			"types": "./dist/snackbar/index.svelte.d.ts",
+			"types": "./dist/snackbar/index.d.ts",
 			"svelte": "./dist/snackbar/index.js"
 		},
 		"./checkbox": {
-			"types": "./dist/checkbox/index.svelte.d.ts",
+			"types": "./dist/checkbox/index.d.ts",
 			"svelte": "./dist/checkbox/index.js"
 		},
 		"./checkboxgroup": {
-			"types": "./dist/checkbox/index.svelte.d.ts",
+			"types": "./dist/checkbox/index.d.ts",
 			"svelte": "./dist/checkbox/index.svelte"
 		},
 		"./inputerror": {
-			"types": "./dist/inputerror/index.svelte.d.ts",
+			"types": "./dist/inputerror/index.d.ts",
 			"svelte": "./dist/inputerror/index.js"
 		},
 		"./input": {
-			"types": "./dist/input/index.svelte.d.ts",
+			"types": "./dist/input/index.d.ts",
 			"svelte": "./dist/input/index.js"
 		},
 		"./select": {
@@ -102,7 +102,7 @@
 			"svelte": "./dist/select/index.js"
 		},
 		"./inputlabel": {
-			"types": "./dist/inputlabel/index.svelte.d.ts",
+			"types": "./dist/inputlabel/index.d.ts",
 			"svelte": "./dist/inputlabel/index.js"
 		},
 		"./listbox": {
@@ -110,31 +110,31 @@
 			"svelte": "./dist/listbox/index.js"
 		},
 		"./radio": {
-			"types": "./dist/radio/index.svelte.d.ts",
+			"types": "./dist/radio/index.d.ts",
 			"svelte": "./dist/radio/index.js"
 		},
 		"./radiogroup": {
-			"types": "./dist/radiogroup/index.svelte.d.ts",
+			"types": "./dist/radiogroup/index.d.ts",
 			"svelte": "./dist/radiogroup/index.svelte"
 		},
 		"./switch": {
-			"types": "./dist/switch/index.svelte.d.ts",
+			"types": "./dist/switch/index.d.ts",
 			"svelte": "./dist/switch/index.js"
 		},
 		"./textarea": {
-			"types": "./dist/textarea/index.svelte.d.ts",
+			"types": "./dist/textarea/index.d.ts",
 			"svelte": "./dist/textarea/index.js"
 		},
 		"./col": {
-			"types": "./dist/col/index.svelte.d.ts",
+			"types": "./dist/col/index.d.ts",
 			"svelte": "./dist/col/index.js"
 		},
 		"./flex": {
-			"types": "./dist/flex/index.svelte.d.ts",
+			"types": "./dist/flex/index.d.ts",
 			"svelte": "./dist/flex/index.js"
 		},
 		"./row": {
-			"types": "./dist/row/index.svelte.d.ts",
+			"types": "./dist/row/index.d.ts",
 			"svelte": "./dist/row/index.js"
 		},
 		"./watfoe": {
@@ -146,35 +146,35 @@
 			"svelte": "./dist/menu/index.js"
 		},
 		"./tabs": {
-			"types": "./dist/tabs/index.svelte.d.ts",
+			"types": "./dist/tabs/index.d.ts",
 			"svelte": "./dist/tabs/index.js"
 		},
 		"./link": {
-			"types": "./dist/link/index.svelte.d.ts",
+			"types": "./dist/link/index.d.ts",
 			"svelte": "./dist/link/index.js"
 		},
 		"./linklikebutton": {
-			"types": "./dist/linklikebutton/index.svelte.d.ts",
+			"types": "./dist/linklikebutton/index.d.ts",
 			"svelte": "./dist/linklikebutton/index.js"
 		},
 		"./text": {
-			"types": "./dist/text/index.svelte.d.ts",
+			"types": "./dist/text/index.d.ts",
 			"svelte": "./dist/text/index.js"
 		},
 		"./backdrop": {
-			"types": "./dist/backdrop/index.svelte.d.ts",
+			"types": "./dist/backdrop/index.d.ts",
 			"svelte": "./dist/backdrop/index.js"
 		},
 		"./likebutton": {
-			"types": "./dist/likebutton/index.svelte.d.ts",
+			"types": "./dist/likebutton/index.d.ts",
 			"svelte": "./dist/likebutton/index.js"
 		},
 		"./popup": {
-			"types": "./dist/popup/index.svelte.d.ts",
+			"types": "./dist/popup/index.d.ts",
 			"svelte": "./dist/popup/index.js"
 		},
 		"./surface": {
-			"types": "./dist/surface/index.svelte.d.ts",
+			"types": "./dist/surface/index.d.ts",
 			"svelte": "./dist/surface/index.js"
 		}
 	},
@@ -189,7 +189,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.7",
+		"@sveltejs/kit": "^2.5.9",
 		"@sveltejs/package": "^2.3.1",
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
