--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Jimmie Lovell<jimmieomlovell@gmail.com>",
-	"version": "0.0.59",
+	"version": "0.0.60",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
@@ -65,6 +65,10 @@
 		"./logo": {
 			"types": "./dist/logo/index.d.ts",
 			"svelte": "./dist/logo/index.js"
+		},
+		"./progress": {
+			"types": "./dist/progress/index.d.ts",
+			"svelte": "./dist/progress/index.js"
 		},
 		"./tooltip": {
 			"types": "./dist/tooltip/index.d.ts",
@@ -181,7 +185,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.141"
+		"svelte": "^5.0.0-next.148"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
@@ -193,18 +197,18 @@
 		"@typescript-eslint/parser": "^7.6.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.38.0",
+		"eslint-plugin-svelte": "^2.39.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.2.7",
-		"svelte": "5.0.0-next.141",
-		"svelte-check": "^3.7.1",
+		"svelte": "5.0.0-next.148",
+		"svelte-check": "^3.8.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.10"
 	},
 	"dependencies": {
-		"libphonenumber-js": "^1.10.61"
+		"libphonenumber-js": "^1.11.2"
 	},
 	"type": "module",
 	"publishConfig": {
