--- a/package.json
+++ b/package.json
@@ -185,10 +185,11 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.148"
+		"svelte": "^5.0.0-next.150"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
+		"@stackblitz/sdk": "^1.10.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.10",
 		"@sveltejs/package": "^2.3.1",
@@ -201,7 +202,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.2.7",
-		"svelte": "5.0.0-next.148",
+		"svelte": "5.0.0-next.150",
 		"svelte-check": "^3.8.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
