--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Jimmie Lovell<jimmieomlovell@gmail.com>",
-	"version": "0.0.62",
+	"version": "0.0.63",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
@@ -37,6 +37,10 @@
 		"./badge": {
 			"types": "./dist/badge/index.d.ts",
 			"svelte": "./dist/badge/index.js"
+		},
+		"./calendar": {
+			"types": "./dist/calendar/index.d.ts",
+			"svelte": "./dist/calendar/index.js"
 		},
 		"./chip": {
 			"types": "./dist/chip/index.d.ts",
@@ -105,10 +109,6 @@
 		"./inputlabel": {
 			"types": "./dist/inputlabel/index.d.ts",
 			"svelte": "./dist/inputlabel/index.js"
-		},
-		"./listbox": {
-			"types": "./dist/listbox/index.d.ts",
-			"svelte": "./dist/listbox/index.js"
 		},
 		"./radio": {
 			"types": "./dist/radio/index.d.ts",
@@ -185,7 +185,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.153"
+		"svelte": "^5.0.0-next.155"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.41.2",
@@ -202,7 +202,7 @@
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.2.7",
-		"svelte": "5.0.0-next.153",
+		"svelte": "5.0.0-next.155",
 		"svelte-check": "^3.8.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
