--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Jimmie Lovell<jimmieomlovell@gmail.com>",
-	"version": "0.0.64",
+	"version": "0.0.65",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
@@ -185,28 +185,28 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.155"
+		"svelte": "^5.0.0-next.164"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.41.2",
-		"@stackblitz/sdk": "^1.10.0",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.10",
-		"@sveltejs/package": "^2.3.1",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@typescript-eslint/eslint-plugin": "^7.6.0",
-		"@typescript-eslint/parser": "^7.6.0",
-		"eslint": "^9.0.0",
+		"@sveltejs/kit": "^2.5.17",
+		"@sveltejs/package": "^2.3.2",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@typescript-eslint/eslint-plugin": "^7.13.1",
+		"@typescript-eslint/parser": "^7.13.1",
+		"browserslist": "^4.23.1",
+		"eslint": "^9.5.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.0",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
-		"publint": "^0.2.7",
-		"svelte": "5.0.0-next.155",
-		"svelte-check": "^3.8.0",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.10"
+		"eslint-plugin-svelte": "^2.40.0",
+		"lightningcss": "^1.25.1",
+		"prettier": "^3.3.2",
+		"prettier-plugin-svelte": "^3.2.5",
+		"publint": "^0.2.8",
+		"svelte": "5.0.0-next.164",
+		"svelte-check": "^3.8.1",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.2",
+		"vite": "^5.3.1"
 	},
 	"dependencies": {
 		"libphonenumber-js": "^1.11.2"
