--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,4 +1,4 @@
-name: Watfoe-UI Package
+name: WUI Package
 
 on:
   release:
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci
-      - run: npm test
+      - run: pnpm ci
+      - run: pnpm test
 
   publish-gpr:
     needs: build
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+      - run: pnpm ci
+      - run: pnpm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.WUI_GH_AUTH_TOKEN}}
