--- a/package.json
+++ b/package.json
@@ -186,31 +186,30 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.242"
+		"svelte": "^5.0.0-next.257",
+		"libphonenumber-js": "^1.11.8"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.4",
-		"@sveltejs/kit": "^2.5.25",
-		"@sveltejs/package": "^2.3.4",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
-		"@typescript-eslint/eslint-plugin": "^8.3.0",
-		"@typescript-eslint/parser": "^8.3.0",
+		"@sveltejs/adapter-static": "^3.0.5",
+		"@sveltejs/kit": "^2.5.28",
+		"@sveltejs/package": "^2.3.5",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@typescript-eslint/eslint-plugin": "^8.5.0",
+		"@typescript-eslint/parser": "^8.6.0",
 		"browserslist": "^4.23.3",
-		"eslint": "^9.9.1",
+		"eslint": "^9.11.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.43.0",
-		"lightningcss": "^1.26.0",
+		"eslint-plugin-svelte": "^2.44.0",
+		"libphonenumber-js": "^1.11.9",
+		"lightningcss": "^1.27.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
-		"publint": "^0.2.10",
-		"svelte": "5.0.0-next.242",
-		"svelte-check": "^3.8.6",
+		"publint": "^0.2.11",
+		"svelte": "5.0.0-next.257",
+		"svelte-check": "^4.0.2",
 		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"vite": "^5.4.2"
-	},
-	"dependencies": {
-		"libphonenumber-js": "^1.11.7"
+		"typescript": "^5.6.2",
+		"vite": "^5.4.7"
 	},
 	"type": "module",
 	"publishConfig": {
