--- a/package.json
+++ b/package.json
@@ -186,8 +186,8 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^5.0.0-next.260",
-		"libphonenumber-js": "^1.11.8"
+		"libphonenumber-js": "^1.11.8",
+		"svelte": "^5.0.0-next.260"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.5",
@@ -196,6 +196,7 @@
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@typescript-eslint/eslint-plugin": "^8.5.0",
 		"@typescript-eslint/parser": "^8.6.0",
+		"browserlist": "^1.0.1",
 		"browserslist": "^4.23.3",
 		"eslint": "^9.11.0",
 		"eslint-config-prettier": "^9.1.0",
