--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@watfoe/wui",
 	"author": "Jimmie Lovell<jimmieomlovell@gmail.com>",
-	"version": "0.0.75",
+	"version": "0.0.76",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/watfoe/wui.git"
@@ -187,30 +187,29 @@
 	],
 	"peerDependencies": {
 		"libphonenumber-js": "^1.11.8",
-		"svelte": "^5.0.0-next.260"
+		"svelte": "^5.0.2"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.5.28",
+		"@sveltejs/kit": "^2.7.2",
 		"@sveltejs/package": "^2.3.5",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@typescript-eslint/eslint-plugin": "^8.5.0",
-		"@typescript-eslint/parser": "^8.6.0",
-		"browserlist": "^1.0.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.10.0",
+		"@typescript-eslint/parser": "^8.10.0",
 		"browserslist": "^4.23.3",
-		"eslint": "^9.11.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.0",
-		"libphonenumber-js": "^1.11.9",
+		"eslint-plugin-svelte": "^2.45.1",
+		"libphonenumber-js": "^1.11.12",
 		"lightningcss": "^1.27.0",
 		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-svelte": "^3.2.7",
 		"publint": "^0.2.11",
-		"svelte": "5.0.0-next.260",
-		"svelte-check": "^4.0.2",
-		"tslib": "^2.7.0",
-		"typescript": "^5.6.2",
-		"vite": "^5.4.7"
+		"svelte": "5.0.2",
+		"svelte-check": "^4.0.5",
+		"tslib": "^2.8.0",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.9"
 	},
 	"type": "module",
 	"publishConfig": {
